manifests/01-registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: dualoj
spec:
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: docker.io/library/registry:2.7.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: dualoj
spec:
  selector:
    app: registry
  ports:
    - port: 80
      targetPort: 5000
