manifests/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judger
  namespace: dualoj
spec:
  selector:
    matchLabels:
      app: judger
  template:
    metadata:
      labels:
        app: judger
    spec:
      serviceAccountName: judger
      containers:
        - name: judger
          image: localhost/dualoj-judge:demo
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            exec:
              command:
                - "sh"
                - "-c"
                - "[ $(echo 'helloworld' | client --addr 'grpc://localhost:50051' echo) = 'helloworld' ]"
          ports:
            - containerPort: 50051
              name: grpc
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: /certs
      volumes:
        - name: certs
          secret:
            secretName: judger-certs
---
apiVersion: v1
kind: Service
metadata:
  name: judger
  namespace: dualoj
spec:
  selector:
    app: judger
  ports:
    - port: 50051
      name: grpc
      targetPort: grpc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: judger
  namespace: dualoj
  labels:
    name: judger
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: judger
                port:
                  name: grpc
    - host: "workstation"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: judger
                port:
                  name: grpc
  tls:
    - secretName: ingress-tls
      hosts:
        - "localhost"
        - "workstation"
