manifests/01-judged-network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: judged-network-policy
  namespace: dualoj
spec:
  podSelector:
    matchLabels:
      app: judged
  policyTypes:
    - "Ingress"
    - "Egress"
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: judger
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: judger
